--- a/metadata.yaml
+++ b/metadata.yaml
@@ -31,5 +31,6 @@ subjects:
 - !lcsh 'Germany -- Foreign relations -- Turkey'
 - !lcc 'D501'
 - !lcsh 'World War, 1914-1918 -- Turkey'
+- GITenberg
 title: Deutschland Über Allah
 url: http://www.gutenberg.org/ebooks/43073
